SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in snapshots and future releases.
===============================================================================================

Enhancements:

Option to use the Vertical-blank Sql-formatter (https://github.com/vertical-blank/sql-formatter) instead of SQuirreL's internal formatter.
  To switch to the Vertical-blank formatter go to menu File --> Global Preference --> tab "SQL formatting".
  This change was inspired by the discussion in bug #1455.

Merge request #73: Add possibility to inject JVM arguments via SQUIRREL_SQL_OPTS command line environment variable.
  Thanks to Antoine Levy-Lambert for thr patch.

Find Alias dialog (ctrl alt shift G or F): Alias folders can be included in search.
  See check box in the upper part of the dialog.
  Double click on a Alias folder will go to the folder in the Alias tree.

New tool bar / right mouse menu functions in Alias tree: Collapse/Expand selected folder.

New SQL result table right mouse menu item: "Show distinct values..."
  Shows distinct values of a column and more.

Merge Request #71: Brushed up the UI of SQuirreL's help.
   Thanks to Stanimir Stamenkov for the patch.


Look and feel Plugin: Upgraded FlatLaf Look and Feel to version 0.44.
   Thanks to Stanimir Stamenkov for the patch.

Aliases which are configured to be connected to during application startup are now written to SQuirreL's logs.
  See Alias check box "Connect at application startup" and menu Windows --> "View SQuirreL Logs".

Option to always use three digit milliseconds in default SQL Timestamp display.
  See menu File --> Global Preference  --> tab "Data Type Controls"
  --> section "Timestamp (SQL type 93)" --> checkbox "Always display Milliseconds in three digits".

Recent Aliases list opened by new dock button on the left of application window.

New default driver definition for InterSystems IRIS.
  Thanks to Dmitry Maslennikov