@@ -4,7 +4,9 @@ ReconnectAction.confirmReconnect=Close the current connection to the database an
 ReconnectAction.reconnect.title=Reconnect to database
 
 ReconnectAction.yes=Yes
+ReconnectAction.yes.mnemonic=y
 ReconnectAction.no=No
+ReconnectAction.no.mnemonic=n
 ReconnectAction.cancel=Cancel
 
 
