@@ -83,5 +83,7 @@ ChooserPreviewer.errorReadingFile=Error reading file {0}: {1}
 
 DontShowAgainDialog.dontShowAgainMsg=Don't show this message again
 DontShowAgainDialog.yes=Yes
+DontShowAgainDialog.yes.mnemonic=y
 DontShowAgainDialog.no=No
+DontShowAgainDialog.no.mnemonic=n
 DontShowAgainDialog.cancel=Cancel
